--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@google/generative-ai": "^0.22.0",
+    "@mui/icons-material": "^6.4.5",
+    "@mui/material": "^6.4.5",
     "next": "15.1.7",
     "openai": "^4.83.0",
     "react": "^19.0.0",
